--- a/.github/actions/dump/action.yml
+++ b/.github/actions/dump/action.yml
@@ -17,11 +17,10 @@ runs:
     - run: printenv | sort
       shell: bash
     - run: echo "${ CONTEXT }"
-
       if: ${{ inputs.enable-context == 'true' }}
       env:
         CONTEXT: ${{ toJson(github) }}
       shell: bash
     - id: current
-      run: echo "::date=$(date)" >> "${GITHUB_OUTPUT}"
+      run: echo "date=$(date)" >> "${GITHUB_OUTPUT}"
       shell: bash
